--- a/src/pages/SettingsPage.css
+++ b/src/pages/SettingsPage.css
@@ -655,6 +655,8 @@
 .checkbox-label span {
   color: var(--text-color);
   text-align: left;
+  display: block;
+  width: 100%;
 }
 
 /* Responsive Design */
